@@ -1,3 +1,8 @@
+2003-07-26  Tim Jenness  <timj@jach.hawaii.edu>
+
+	* lib/Astro/Coords.pm (_cvt_torad): Issue a warning if the
+	sexagesimal string can not be parsed.
+
 2003-07-15  Tim Jenness  <timj@jach.hawaii.edu>
 
 	* lib/Astro/Coords.pm: Add rise/set/transit time and definitions
